# grpredict

./: AGENTS.md  CHANGELOG.md  README.md  getting_started.py  getting_started_normalization.py  plot_ekf_profile_noise_grid.py  pyproject.toml
.github/workflows/: ci.yaml
scratch/: plot_ekf_profile_noise_grid.py
src/grpredict/: __init__.py  __init__.pyi
tests/: __init__.py  simulation_utils.py  test_ekf.py  test_simulated_profiles_with_ekf.py  test_simulation_utils.py  test_warmup_initialization_end_to_end.py
